--- a/index.html
+++ b/index.html
@@ -302,9 +302,10 @@
       </div>
     </div>
   </section>
+  <!-----------------------student img----------------------->
   <section>
     <div class="container mt-5">
-      <div class="  w-50">
+      <div class=" w-50">
         <h3>Meet Our Successfull
           Students</h3>
         <p>It is a long established fact that a reader will be distracted by the
@@ -348,13 +349,13 @@
       <p class="text-center w-80 ">It is a long established fact that a reader will be distracted by the readable
       content of a page when looking at its layout.</p>
     </div>
-    <div class="d-flex container ">
+    <div class=" container ">
       <div class="border w-50 container pt-5">
         <div class="d-flex">
           <div>
             <img src="images/comma.png" alt="">
           </div>
-          <div class="star">
+          <div class="star d-flex">
             <i class="fa-solid fa-star filled"></i>
             <i class="fa-solid fa-star filled"></i>
             <i class="fa-solid fa-star filled"></i>
@@ -381,7 +382,7 @@
           <div>
             <img src="images/comma.png" alt="">
           </div>
-          <div class="star">
+          <div class="star d-flex">
             <i class="fa-solid fa-star filled"></i>
             <i class="fa-solid fa-star filled"></i>
             <i class="fa-solid fa-star filled"></i>
