--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-12 col-sm-12 col-12 col-lg-6 visibility ">
+        <div class="col-md-12 col-sm-12 col-12 col-lg-6 visibility-course ">
           <div class="p-3 border bg-light d-lg-flex d-md-flex d-sm-inline">
             <div class="p-2">
               <img src="images/course/course-4.png" alt="">
@@ -209,7 +209,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-12 col-sm-12 col-12 col-lg-6 visibility">
+        <div class="col-md-12 col-sm-12 col-12 col-lg-6 visibility-course">
           <div class="p-3 border bg-light d-lg-flex d-md-flex d-sm-inline">
             <div class="p-2">
               <img src="images/course/course-5.png" alt="">
@@ -222,7 +222,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-12 col-sm-12 col-12 col-lg-6 visibility">
+        <div class="col-md-12 col-sm-12 col-12 col-lg-6 visibility-course">
           <div class="p-3 border bg-light d-lg-flex d-md-flex d-sm-inline">
             <div class="p-2">
               <img src="images/course/course-6.png" alt="">
